change img logo path index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="container">
         <nav class="navigation">
             <a href="" class="logo-link">
-              <img src="/img/goit-logo.svg" alt="GOIT logo">
+              <img src="./img/goit-logo.svg" alt="GOIT logo">
             </a>
             <div class="navigation-center-menu desktop-element">
               <a href="#about" class="mobile-menu-item">about</a>
@@ -445,6 +445,36 @@
         </div>
 
 
+        <div class="footer-contacts-container mobile-element desktop-element">
+          <a href="tel:+380505050505" class="footer-phone-number mobile-element desktop-element">+38 (050) 505 05 05</a>
+          <a href="mailto:alexturdev@gmail.com" class="footer-e-mail mobile-element desktop-element">alexturdev@gmail.com</a>
+        </div>
+
+
+
+        <div class="social-networks-container mobile-element">
+          <div>
+            <a href="">
+              <i class="fab fa-github-square"></i>
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <i class="fab fa-linkedin"></i>
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </div>
+        </div>
+        
         <div class="tablet-element">
           <h3 class="footer-name">Alex Tur</h3>
           <p class="footer-profession">Frontend Developer</p>
@@ -471,39 +501,14 @@
             </div>
           </div>
         </div>
+
         <div class="tablet-element">
           <div class="footer-phone-number-wrap"><a href="tel:+380505050505" class="footer-phone-number">+38 (050) 505 05 05</a></div> 
           <div class="footer-email-wrap"><a href="mailto:alexturdev@gmail.com" class="footer-e-mail">alexturdev@gmail.com</a></div>
         </div>
 
 
-        <div class="footer-contacts-container mobile-element desktop-element">
-          <a href="tel:+380505050505" class="footer-phone-number mobile-element desktop-element">+38 (050) 505 05 05</a>
-          <a href="mailto:alexturdev@gmail.com" class="footer-e-mail mobile-element desktop-element">alexturdev@gmail.com</a>
-        </div>
 
-        <div class="social-networks-container mobile-element desktop-element">
-          <div>
-            <a href="">
-              <i class="fab fa-github-square"></i>
-            </a>
-          </div>
-          <div>
-            <a href="">
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </div>
-          <div>
-            <a href="">
-              <i class="fab fa-facebook-square"></i>
-            </a>
-          </div>
-          <div>
-            <a href="">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </div>
-        </div>
       </div>
     </footer>
     
