change mobile-element to footer-mobile-element and add new classes display: block/none

--- a/index.html
+++ b/index.html
@@ -439,39 +439,41 @@
     <footer class="footer-container" id="contacts">
       <div class="container">
 
-        <div class="footer-name-container mobile-element desktop-element">
-          <h3 class="footer-name mobile-element desktop-element">Alex Tur</h3>
-          <p class="footer-profession mobile-element desktop-element">Frontend Developer</p>
+        <div class="footer-name-container footer-mobile-element desktop-element">
+          <h3 class="footer-name footer-mobile-element desktop-element">Alex Tur</h3>
+          <p class="footer-profession footer-mobile-element desktop-element">Frontend Developer</p>
         </div>
 
 
-        <div class="footer-contacts-container mobile-element desktop-element">
-          <a href="tel:+380505050505" class="footer-phone-number mobile-element desktop-element">+38 (050) 505 05 05</a>
-          <a href="mailto:alexturdev@gmail.com" class="footer-e-mail mobile-element desktop-element">alexturdev@gmail.com</a>
+        <div class="footer-contacts-container footer-mobile-element desktop-element">
+          <a href="tel:+380505050505" class="footer-phone-number footer-mobile-element desktop-element">+38 (050) 505 05 05</a>
+          <a href="mailto:alexturdev@gmail.com" class="footer-e-mail footer-mobile-element desktop-element">alexturdev@gmail.com</a>
         </div>
 
 
 
-        <div class="social-networks-container mobile-element">
-          <div>
-            <a href="">
-              <i class="fab fa-github-square"></i>
-            </a>
-          </div>
-          <div>
-            <a href="">
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </div>
-          <div>
-            <a href="">
-              <i class="fab fa-facebook-square"></i>
-            </a>
-          </div>
-          <div>
-            <a href="">
-              <i class="fab fa-instagram"></i>
-            </a>
+        <div class="social-networks-container desktop-element footer-mobile-element ">
+          <div class="flex-wrap-soc-network">
+            <div>
+              <a href="">
+                <i class="fab fa-github-square"></i>
+              </a>
+            </div>
+            <div>
+              <a href="">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </div>
+            <div>
+              <a href="">
+                <i class="fab fa-facebook-square"></i>
+              </a>
+            </div>
+            <div>
+              <a href="">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </div>
           </div>
         </div>
         
